--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,8 +10,18 @@
   	<description></description>
   	<servlet-class>com.afkghouri.Login</servlet-class>
   </servlet>
+  <servlet>
+  	<servlet-name>DemoServlet</servlet-name>
+  	<display-name>DemoServlet</display-name>
+  	<description></description>
+  	<servlet-class>com.afkghouri.DemoServlet</servlet-class>
+  </servlet>
   <servlet-mapping>
   	<servlet-name>Login</servlet-name>
   	<url-pattern>/Login</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>DemoServlet</servlet-name>
+  	<url-pattern>/DemoServlet</url-pattern>
   </servlet-mapping>
 </web-app>
